--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="rating" content="general">
     <meta name="classification" content="Education">
     <meta name="theme-color" content="#C4550A">
+
+    <meta name="google-site-verification" content="kj6psn1ZER6yp72htXIlyzC29A-fRYPqpRowpXa8fqk" />
+    <meta name="msvalidate.01" content="501A4DCF5221C015DE2E241CFE9FDE2A" />
     
     <meta property="og:type" content="article">
     <meta property="og:title" content="メタマスク拡張機能をダウンロードして始めるウォレット利用ガイド">
@@ -904,4 +907,5 @@
     })();
     </script>
 </body>
+
 </html>
